--- a/responsive-task.html
+++ b/responsive-task.html
@@ -1,81 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <title>Responsive Web Design Task: Task</title>
-    <link rel="stylesheet" href="./assets/default.css"/>
-    <link rel="stylesheet" href="./assets/responsive.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
 
-  <body>
-    <header>
-      <div class="title">My Website</div>
-      <nav>
-        <ul>
-          <li>
-            <a href="">Link 1</a>
-          </li>
-          <li>
-            <a href="">Link 2</a>
-          </li>
-          <li>
-            <a href="">Link 3</a>
-          </li>
-        </ul>
-      </nav>
+<head>
+    <meta charset="utf-8" />
+    <title>Responsive Web Design Task: Task</title>
+    <link rel="stylesheet" href="./assets/default.css" />
+    <link rel="stylesheet" href="./assets/responsive.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+    <header class="row">
+        <div class="title">My Website</div>
+        <nav class="col">
+            <ul>
+                <li>
+                    <a href="">Link 1</a>
+                </li>
+                <li>
+                    <a href="">Link 2</a>
+                </li>
+                <li>
+                    <a href="">Link 3</a>
+                </li>
+            </ul>
+        </nav>
 
     </header>
 
-    <main>
-      <article>
-        <h1>This is the main heading</h1>
-        <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+    <main class="row">
+        <div class="col-9">
+            <article>
+                <h1>This is the main heading</h1>
+                <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
 
-        <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                <p>Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.</p>
+                <div class="row">
+                    <ul class="cards">
+                        <li>
+                            <h2>Card One</h2>
+                            <div class="inner">
+                                <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h2>Card Two</h2>
+                            <div class="inner">
+                                <p>Daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h2>Card Three</h2>
+                            <div class="inner">
+                                <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h2>Card Four</h2>
+                            <div class="inner">
+                                <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
+                            </div>
+                        </li>
+                        <li>
+                            <h2>Card Five</h2>
+                            <div class="inner">
+                                <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
+                            </div>
+                        </li>
 
-        <ul class="cards">
-          <li>
-            <h2>Card One</h2>
-            <div class="inner">
-              <p>Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Two</h2>
-            <div class="inner">
-              <p>Daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Three</h2>
-            <div class="inner">
-              <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Four</h2>
-            <div class="inner">
-              <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
-            </div>
-          </li>
-          <li>
-            <h2>Card Five</h2>
-            <div class="inner">
-              <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
-            </div>
-          </li>
-
-        </ul>
-      </article>
-      <aside class="sidebar">
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-      </aside>
+                    </ul>
+                </div>
+            </article>
+        </div>
+        <div class="col-3">
+            <aside class="col sidebar">
+                <a href="#">About</a>
+                <a href="#">Services</a>
+                <a href="#">Clients</a>
+                <a href="#">Contact</a>
+            </aside>
+        </div>
     </main>
 
-  </body>
+</body>
 
 </html>
